fixed bug with friend name not showing once added

--- a/app/assets/stylesheets/pages/_user_profile.scss
+++ b/app/assets/stylesheets/pages/_user_profile.scss
@@ -298,6 +298,8 @@
 }
 
 .name{
+  width: 50%;
+  overflow:hidden;
   color: #cfaf2f;
   font-size: 18px;
   letter-spacing: 3;
